<resources>
    <string name="app_name">Fridge</string>
    <string name="title_fridge">Fridge</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_notifications">Notifications</string>
    <string name="fridge_content_including_listview">Fridge content including listview</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="expirationDateNotif">from notification</string>
    <string name="try_it">Show notification example</string>
    <string name="placeName">City: Unknown</string>
    <string name="plus">Plus</string>
    <string name="minus">Minus</string>
    <string name="nb">number of item</string>
    <string name="order_by">Order by:</string>
    <string name="Donations">Donations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donate">Donate to nearby places</string>
</resources>