<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_fridge">

    <fragment
        android:id="@+id/navigation_fridge"
        android:name="edu.polytech.fridge.ui.fridge.FridgeFragment"
        android:label="@string/title_fridge"
        tools:layout="@layout/fragment_fridge" />

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="edu.polytech.fridge.ui.recipe.RecipeFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="edu.polytech.fridge.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>