<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/linearLayoutVERT"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintStart_toEndOf="@+id/food_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37"
            tools:text="Food item name" />

        <TextView
            android:id="@+id/food_expiration_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/food_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.733"
            tools:text="dd/mm/yyyy" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutBLEU"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/food_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:contentDescription="food"
            android:src="@drawable/ic_refrigerator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />


        <LinearLayout
            android:id="@+id/linearLayoutquantity"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/incrementQuantity"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:contentDescription="@string/minus"
                android:src="@drawable/ic_plus" />

            <ImageButton
                android:id="@+id/decrementQuantity"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:contentDescription="@string/plus"
                android:src="@drawable/ic_minus" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutDONATE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/currentQuantity"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="0"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="50dp"
                android:textColor="@color/black"
                android:background="@color/white"
                android:contentDescription="@string/nb"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/donate"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:contentDescription="@string/plus"
                android:src="@drawable/ic_donate_donation_svgrepo_com"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toEndOf="@+id/simple_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

